# NHF2Reversi

./: CMakeLists.txt  NHF2Reversi.cpp  NHF2Reversi.vcxproj.filters  NHF2Reversi.vcxproj.xml  jatek.cpp  jatek.h  kimenet.h  konzol.cpp  konzol.h  tabla.cpp  tabla.h
Debug/: vc141.idb
Debug/NHF2Reversi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NHF2Reversi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
